tests/snapshots/run_wpt_conformance__trtx_convTranspose2d_default___clamp.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "subgraph.https.any.js",
    "convTranspose2d default + clamp",
    "trtx",
    Failed {
        msg: Some(
            "Failed to write tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")",
        ),
    },
)
